Add ingredients list to doro-wat.html

--- a/recipes/doro-wat.html
+++ b/recipes/doro-wat.html
@@ -12,5 +12,23 @@
            It is the most popular traditional food in Eritrea and Ethiopia. Considered the national dish, it is the food of choice during formal and informal gatherings,
            eaten together as part of a group who share a communal bowl and basket of injera.</p>
         <h4>Ingredients</h4>
+        <ul>
+            <li>1¾ pounds chicken thighs,skin removed</li>
+            <li>1 ¾ pounds chicken drumsticks,skin removed</li>
+            <li>1/4 cup grated fresh ginger</li>
+            <li>2 tablespoons minced garlic</li>
+            <li>4 tablespoons niter kibbeh(spiced clarified butter),divided</li>
+            <li>1 cup thinly sliced red onion</li>
+            <li>1 cup thinly sliced red onion</li>
+            <li>1 (15 ounce) can tomato sauce</li>
+            <li>tablespoons berbere (Ethiopian spice blend)</li></li>
+            <li>1 ½ teaspoons fine kosher salt</li>
+            <li>1 teaspoon sweet paprika</li>
+            <li>½ teaspoon cayenne pepper</li>
+            <li>teaspoon ground cardamom</li>
+            <li>½ teaspoon ground nutmeg</li>
+            <li>2 tablespoons finely chopped cilantro leaves and stems</li>
+            <li>6 pieces injera (Ethiopian bread)</li>
+        </ul>
     </body>
 </html>
