--- a/recipes/doro-wat.html
+++ b/recipes/doro-wat.html
@@ -30,5 +30,17 @@
             <li>2 tablespoons finely chopped cilantro leaves and stems</li>
             <li>6 pieces injera (Ethiopian bread)</li>
         </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Pierce chicken thighs and drumsticks in a few spots with a knife; rub with ginger and garlic to coat.</li>
+            <li>Heat 2 tablespoons niter kibbeh in a deep, 12-inch skillet or Dutch oven over medium-high heat. 
+                Arrange chicken pieces in a single layer and sear until browned, about 3 minutes per side. Transfer to a plate.</li>
+            <li>Add remaining 2 tablespoons niter kibbeh to the skillet. Add onion; stir-fry over medium-high heat until softened and light brown around the edges, 5 to 8 minutes.
+                Pour in tomato sauce and sprinkle in berbere, salt, paprika, cayenne, cardamom, and nutmeg.
+                 Bring to a boil.Reduce heat to low, cover, and simmer, stirring occasionally, until a thin layer of oil separates from the sauce, forming a spice-colored film on its surface, about 20 minutes.</li>
+            <li>Return chicken and any pooled juices to the skillet; coat with sauce. Cook, covered and turning pieces occasionally,
+                until the thickest parts are no longer pink when pierced and meat begins to fall off the bone, 35 to 40 minutes.</li>
+            <li>Sprinkle with cilantro and serve with injera.</li>
+        </ol>
     </body>
 </html>
