Add links to kifto.html and injera.html in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href = "recipes/doro-wat.html">Doro-wat</a>
+        <a href = "recipes/kitfo.html">Kitfo</a>
+        <a href = "recipes/Injera.html">Injera</a>
     </body>
 </html>
