Fix typo in injera.html link in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href = "recipes/doro-wat.html">Doro-wat</a>
         <a href = "recipes/kitfo.html">Kitfo</a>
-        <a href = "recipes/Injera.html">Injera</a>
+        <a href = "recipes/injera.html">Injera</a>
     </body>
 </html>
