Add ingredients list to kitfo.html

--- a/recipes/kitfo.html
+++ b/recipes/kitfo.html
@@ -7,5 +7,10 @@
     <body>
         <h1>Kitfo Recipe</h1>
         <img src = "../Images/Kitfo.webp" alt = "Ethiopian traditional dish Kitfo">
+        <h4>Ethiopian traditional dish Kitfo</h4>
+        <p>A culinary specialty of the Gurage region of Central Ethiopia, kitfo is a rich and flavorful dish made with minced raw lean beef,
+           spices (the classic Ethiopian spice blend known as mitmita), and an herb-infused clarified butter known as niter kibbeh.
+           Kitfo is renowned for its bold flavor and luxurious texture.</p>
+        
     </body>
 </html>
