Add list of steps to make injera to injera.html

--- a/recipes/injera.html
+++ b/recipes/injera.html
@@ -7,6 +7,30 @@
     <body>
         <h1>Injera Recipe</h1>
         <img src = "../Images/Injera.jpeg" alt = "Ethiopian traditional flat bread injera">
-        
+        <h2>Ethiopian traditional flat bread</h2>
+        <p>Injera is not only a kind of bread—it’s also an eating utensil.
+           In Ethiopia and Eritrea, this spongy, sour flatbread is used to scoop up meat and vegetable stews.
+           Injera also lines the tray on which the stews are served, soaking up their juices as the meal progresses.
+           When this edible tablecloth is eaten, the meal is officially over.</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>1/4 cup teff flour</li>
+            <li>3/4 cup all-purpose flour</li>
+            <li>1 cup water</li>
+            <li>a pinch of salt</li>
+            <li>peanut or vegetable oil</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Put the teff flour in the bottom of a mixing bowl, and sift in the all-purpose flour.</li>
+            <li>Slowly add the water, stirring to avoid lumps.</li>
+            <li>Put the batter aside for a day or more (up to three days) to allow it to ferment.
+                In this time, your injera batter will start to bubble and acquire the slight tanginess for which it’s known.</li>
+            <li>Stir in the salt.</li>
+            <Li>Heat a nonstick pan or lightly oiled cast-iron skillet until a water
+                drop dances on the surface. Make sure the surface of the pan is smooth: Otherwise, your injera might fall apart when you try to remove it.</Li>
+            <li>Coat the pan with a thin layer of batter. Injera should be thicker than a crêpe, but not as thick as a traditional pancake. 
+                It will rise slightly when it heats.</li>
+        </ol>
     </body>
 </html>
