Make a list of recipe links in index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "recipes/doro-wat.html">Doro-wat</a>
-        <a href = "recipes/kitfo.html">Kitfo</a>
-        <a href = "recipes/injera.html">Injera</a>
+        <ul>
+           <li><a href = "recipes/doro-wat.html">Doro-wat</a></li>
+           <li><a href = "recipes/kitfo.html">Kitfo</a></li>
+           <li><a href = "recipes/injera.html">Injera</a></li>
     </body>
 </html>
